--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "pestphp/pest": "^2.34"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
